Inicio, cierre y manejo de sesiones completo

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
   <link href="assets/css/plugins/codemirror/codemirror.css" rel="stylesheet">
   <link href="assets/css/plugins/codemirror/ambiance.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- Toastr style -->
+  <link href="assets/css/plugins/toastr/toastr.min.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -29,6 +33,11 @@
   <!-- Custom and plugin javascript -->
   <script src="assets/js/inspinia.js"></script>
   <script src="assets/js/plugins/pace/pace.min.js"></script>
+
+
+  <!-- Toastr script -->
+  <script src="assets/js/plugins/toastr/toastr.min.js"></script>
+
 </body>
 
 </html>
