--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,12 @@
 
   <!-- Toastr style -->
   <link href="assets/css/plugins/toastr/toastr.min.css" rel="stylesheet">
-  <!-- Sweet Alert -->
-  <!-- <link href="assets/css/plugins/sweetalert/sweetalert.css" rel="stylesheet"> -->
+
+  <link href="assets/css/plugins/blueimp/css/blueimp-gallery.min.css" rel="stylesheet">
 
   <link href="assets/css/animate.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -39,9 +40,13 @@
 
   <!-- Toastr script -->
   <script src="assets/js/plugins/toastr/toastr.min.js"></script>
-  <!-- Sweet alert -->
-  <!-- <script src="assets/js/plugins/sweetalert/sweetalert.min.js"></script> -->
 
+  <!-- blueimp gallery -->
+  <script src="assets/js/plugins/blueimp/jquery.blueimp-gallery.min.js"></script>
+
+  <!--PDF.js https://github.com/mozilla/pdf.js -->
+  <script src="assets/js/plugins/pdfjs/pdf.js"></script>
+  <!-- <script src="https://raw.github.com/mozilla/pdf.js/gh-pages/build/pdf.js"></script> -->
 </body>
 
 </html>
