--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,10 @@
   <link href="assets/css/animate.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <link href="assets/css/plugins/slick/slick.css" rel="stylesheet">
+  <link href="assets/css/plugins/slick/slick-theme.css" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -47,6 +51,12 @@
   <!--PDF.js https://github.com/mozilla/pdf.js -->
   <script src="assets/js/plugins/pdfjs/pdf.js"></script>
   <!-- <script src="https://raw.github.com/mozilla/pdf.js/gh-pages/build/pdf.js"></script> -->
+
+  <script src="assets/js/plugins/elevatezoom/jquery.elevatezoom.js"></script>
+
+  <!-- slick carousel-->
+  <script src="assets/js/plugins/slick/slick.min.js"></script>
+
 </body>
 
 </html>
