--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,40 @@
   <link href="assets/css/plugins/slick/slick-theme.css" rel="stylesheet">
 
 
+  <link href="assets/css/plugins/iCheck/custom.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/chosen/bootstrap-chosen.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/bootstrap-tagsinput/bootstrap-tagsinput.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/colorpicker/bootstrap-colorpicker.min.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/cropper/cropper.min.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/switchery/switchery.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/jasny/jasny-bootstrap.min.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/nouslider/jquery.nouislider.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/datapicker/datepicker3.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/ionRangeSlider/ion.rangeSlider.css" rel="stylesheet">
+  <link href="assets/css/plugins/ionRangeSlider/ion.rangeSlider.skinFlat.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/clockpicker/clockpicker.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/daterangepicker/daterangepicker-bs3.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/select2/select2.min.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/touchspin/jquery.bootstrap-touchspin.min.css" rel="stylesheet">
+
+  <link href="assets/css/plugins/dualListbox/bootstrap-duallistbox.min.css" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -56,6 +90,65 @@
 
   <!-- slick carousel-->
   <script src="assets/js/plugins/slick/slick.min.js"></script>
+
+
+
+  <!-- Chosen -->
+  <script src="assets/js/plugins/chosen/chosen.jquery.js"></script>
+
+ <!-- JSKnob -->
+ <script src="assets/js/plugins/jsKnob/jquery.knob.js"></script>
+
+ <!-- Input Mask-->
+  <script src="assets/js/plugins/jasny/jasny-bootstrap.min.js"></script>
+
+ <!-- Data picker -->
+ <script src="assets/js/plugins/datapicker/bootstrap-datepicker.js"></script>
+
+ <!-- NouSlider -->
+ <script src="assets/js/plugins/nouslider/jquery.nouislider.min.js"></script>
+
+ <!-- Switchery -->
+ <script src="assets/js/plugins/switchery/switchery.js"></script>
+
+  <!-- IonRangeSlider -->
+  <script src="assets/js/plugins/ionRangeSlider/ion.rangeSlider.min.js"></script>
+
+  <!-- iCheck -->
+  <script src="assets/js/plugins/iCheck/icheck.min.js"></script>
+
+  <!-- MENU -->
+  <script src="assets/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+
+  <!-- Color picker -->
+  <script src="assets/js/plugins/colorpicker/bootstrap-colorpicker.min.js"></script>
+
+  <!-- Clock picker -->
+  <script src="assets/js/plugins/clockpicker/clockpicker.js"></script>
+
+  <!-- Image cropper -->
+  <script src="assets/js/plugins/cropper/cropper.min.js"></script>
+
+  <!-- Date range use moment.js same as full calendar plugin -->
+  <script src="assets/js/plugins/fullcalendar/moment.min.js"></script>
+
+  <!-- Date range picker -->
+  <script src="assets/js/plugins/daterangepicker/daterangepicker.js"></script>
+
+  <!-- Select2 -->
+  <script src="assets/js/plugins/select2/select2.full.min.js"></script>
+
+  <!-- TouchSpin -->
+  <script src="assets/js/plugins/touchspin/jquery.bootstrap-touchspin.min.js"></script>
+
+  <!-- Tags Input -->
+  <script src="assets/js/plugins/bootstrap-tagsinput/bootstrap-tagsinput.js"></script>
+
+  <!-- Dual Listbox -->
+  <script src="assets/js/plugins/dualListbox/jquery.bootstrap-duallistbox.js"></script>
+
+  <!-- Typehead -->
+  <script src="assets/js/plugins/typehead/bootstrap3-typeahead.min.js"></script>
 
 </body>
 
