Adaptación del Logo y primer Release

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -96,20 +96,20 @@
   <!-- Chosen -->
   <script src="assets/js/plugins/chosen/chosen.jquery.js"></script>
 
- <!-- JSKnob -->
- <script src="assets/js/plugins/jsKnob/jquery.knob.js"></script>
+  <!-- JSKnob -->
+  <script src="assets/js/plugins/jsKnob/jquery.knob.js"></script>
 
- <!-- Input Mask-->
+  <!-- Input Mask-->
   <script src="assets/js/plugins/jasny/jasny-bootstrap.min.js"></script>
 
- <!-- Data picker -->
- <script src="assets/js/plugins/datapicker/bootstrap-datepicker.js"></script>
+  <!-- Data picker -->
+  <script src="assets/js/plugins/datapicker/bootstrap-datepicker.js"></script>
 
- <!-- NouSlider -->
- <script src="assets/js/plugins/nouslider/jquery.nouislider.min.js"></script>
+  <!-- NouSlider -->
+  <script src="assets/js/plugins/nouslider/jquery.nouislider.min.js"></script>
 
- <!-- Switchery -->
- <script src="assets/js/plugins/switchery/switchery.js"></script>
+  <!-- Switchery -->
+  <script src="assets/js/plugins/switchery/switchery.js"></script>
 
   <!-- IonRangeSlider -->
   <script src="assets/js/plugins/ionRangeSlider/ion.rangeSlider.min.js"></script>
